Bug 131419 - Skia: column headers are not correctly redrawn after covered by tooltips
Summary: Skia: column headers are not correctly redrawn after covered by tooltips
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-03-19 11:53 UTC by Mike Kaganski
Modified: 2020-05-28 12:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (305.39 KB, image/gif)
2020-03-19 11:53 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-03-19 11:53:09 UTC
Created attachment 158795 [details]
Screencast

Please see the attached screencast to see how tooltips break column headers.

Tested with Version: 7.0.0.0.alpha0+ (x64)
Build ID: 8276fccefdefad7304f05c707f08d6d1ecaa9d55
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 1 Roman Kuznetsov 2020-03-19 13:32:48 UTC
confirm in

Версия: 7.0.0.0.alpha0+ (x64)
ID сборки: 6388c578c672690fff662cb04b6a0436cd742f37
Потоков ЦП: 4; ОС: Windows 10.0 Build 18362; Отрисовка ИП: Skia/растр; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded

build from 19 March 2020
Comment 2 V Stuart Foote 2020-04-25 14:42:59 UTC
Remains an issue with TB77 build for 2020-04-25, as in animated clip of OP dragging the tooltip left leaves a trail of missing pixels on the top line--interestingly, dragging the tooltip the opposite direction will repair them missing pixels.

Affecting both Skia rendering modes Vulkan & raster.
 
Version: 7.0.0.0.alpha0+ (x64)
Build ID: fe1cf8656d6963844553993a77ef565fb2fbeda7
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Commit Notification 2020-05-28 08:06:25 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17bdb844bba68cd0cb54312bd9ea1037850db5fd

do not explicitly invalidate window under a tooltip (tdf#131419)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-05-28 12:36:59 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/3e78c8b75c2a170b13395e86d6978946a1acbe7c

do not explicitly invalidate window under a tooltip (tdf#131419)

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.