do not explicitly invalidate window under a tooltip (tdf#131419)

It doesn't really make sense, since tooltips are separate windows,
any repaints will be normally handled by the windowing system.
And native (=handled by a specific VCL backend) tooltips do not
do this either.
This avoids an off-by-one error somewhere, seen in tdf#131419.

Change-Id: Ie22dad61d021807aa15efdde7dbb77274460d575
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94976
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit 17bdb844bba68cd0cb54312bd9ea1037850db5fd)